# react-native-ssl-manager

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  NitroSslManager.podspec  README.md  UseSslPinningModule.podspec  app.plugin.js  autoshell-loop.sh  autoshell.yaml  bun.lockb  bunfig.toml  expo-module.config.json  nitro.json  package-lock.json  package.json  react-native-ssl-manager.podspec  react-native-use-ssl-pinning.podspec  react-native.config.js  skills-lock.json  tsconfig.json
.cursor/: mcp.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties  ssl-pinning-setup.gradle
android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
android/src/main/java/com/margelo/nitro/sslmanager/: HybridSslManager.kt
android/src/main/java/com/usesslpinning/: AuditPinningInterceptor.kt  PinnedOkHttpClient.kt  PinningClientConfigurator.kt  PinningFailureEventListener.kt  PinningFailureReporter.kt  SharedLogic.kt  SslConfigStore.kt  SslPinningFactory.kt  SslPinningInitializer.kt  SslPinningPolicy.kt  UseSslPinningFactory.kt  UseSslPinningModule.kt  UseSslPinningModuleImpl.kt  UseSslPinningPackage.kt
android/src/main/java/com/usesslpinning/cli/: UseSslPinningPackage.kt
android/src/main/java/com/usesslpinning/expo/: UseSslPinningExpoModule.kt
android/src/newarch/com/usesslpinning/: UseSslPinningModule.kt  UseSslPinningPackage.kt
android/src/oldarch/com/usesslpinning/: UseSslPinningModule.kt  UseSslPinningPackage.kt
android/src/test/java/com/usesslpinning/: SslPinningPolicyTest.kt
example-expo/: app.json  (+5 more)
(+171 files in other folders)
